[tool.poetry]
name = "husqvarna-getl"
version = "1.6.0"
description = "An elegant way to ETL'ing"
documentation = "https://getl.readthedocs.io/"
repository = "https://github.com/husqvarnagroup/GETL/"
authors = [
    "Linus Wallin <linus.wallin@husqvarnagroup.com>",
    "Niels Lemmens <niels.lemmens@husqvarnagroup.com>",
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include="getl" },
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.13.24"
pyspark = ">=2.4.4,<3.1"
oyaml = "^0.9"
psycopg2-binary = {version = "^2.8", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
mkdocs = "^1.1.2"
pytest-cov = "^2.9.0"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.8.3"
pre-commit = "^2.5.1"
click = "^7.0"
moto = "1.3.14"

[tool.poetry.extras]
postgres = ["psycopg2-binary"]

[tool.poetry.plugins."mkdocs.plugins"]
RootFiles = "mkdocs_plugins:RootFiles"
LiftBlock = "mkdocs_plugins:LiftBlock"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
