[tool.poetry]
name = "husqvarna-getl"
version = "3.4.0"
description = "An elegant way to ETL'ing"
documentation = "https://getl.readthedocs.io/"
repository = "https://github.com/husqvarnagroup/GETL/"
authors = [
    "Linus Wallin <linus.wallin@husqvarnagroup.com>",
    "Niels Lemmens <niels.lemmens@husqvarnagroup.com>",
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include="getl" },
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "*"
pyspark = ">=3.2,<3.6"
oyaml = "*"
psycopg2-binary = "*"
typeguard = "*"
mysql-connector-python = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mkdocs = "*"
pytest-cov = "*"
black = "*"
isort = "*"
flake8 = "*"
pre-commit = "*"
click = "*"
moto = {version = "*", extras = ["all"]}

[tool.poetry.plugins."mkdocs.plugins"]
RootFiles = "mkdocs_plugins:RootFiles"
LiftBlock = "mkdocs_plugins:LiftBlock"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
